<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_foodlist"
            android:icon="@drawable/ic_menu_foodlist"
            android:title="@string/fdlst" />
        <item
            android:id="@+id/nav_saved_recipe"
            android:icon="@drawable/ic_menu_recipes"
            android:title="@string/svdrcp" />
        <item
            android:id="@+id/nav_placeholder"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/plchold" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/login" />
    </group>

</menu>
